# beamng-ros2-integration

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  build_docs.sh  build_docs_ci.sh  contributing.md
beamng_agent/: CMakeLists.txt  package.xml  setup.cfg  setup.py
beamng_agent/beamng_agent/: agent.py  beamng_agent.py
beamng_agent/launch/: beamng_agent_launch.py
beamng_bringup/: CMakeLists.txt  package.xml
beamng_bringup/launch/: beamng_agent.launch.py  beamng_bridge.launch.py  beamng_teleop_keyboard.launch.py
beamng_control/: package.xml  setup.cfg  setup.py
beamng_control/beamng_control/: bridge.py  publishers.py  sensorHelper.py
beamng_control/config/rviz/: example.rviz
beamng_control/config/scenarios/: west_coast_with_no_automation.json  west_coast_with_no_sensor.json
beamng_control/launch/: beamng_control.launch.py
beamng_msgs/: CMakeLists.txt  package.xml
beamng_msgs/doc/: conf.py
beamng_msgs/msg/: CosimulationInput.msg  DamageSensor.msg  ElectricsSensor.msg  GForceSensor.msg  IdealRadarSensorVehicle.msg  MeshSensor.msg  StateSensor.msg  TimeSensor.msg  VehicleControl.msg  WheelThermals.msg
beamng_msgs/srv/: ResetCounter.srv  SetControlMode.srv  SpawnVehicle.srv  StartCosimulation.srv  StartScenario.srv  TeleportVehicle.srv  VehicleCommand.srv
beamng_ros2/: package.xml  requirements.txt  setup.cfg  setup.py
beamng_ros2/beamng_ros2/: beamng.py  scenario_loader.py  utils.py  vehicle.py
beamng_ros2/beamng_ros2/examples/: __init__.py  example_client.py
beamng_ros2/beamng_ros2/publishers/: __init__.py  base.py  coupling.py  road_network.py  sensors.py  viz.py
beamng_ros2/config/: sensors.json
beamng_ros2/config/cosim/: default.json
beamng_ros2/config/scenarios/: example_italy.json  example_italy_shmem.json  example_tech_ground.json  example_wca.json  west_coast_with_all_sensors.json
beamng_ros2/doc/: conf.py
beamng_teleop_keyboard/: package.xml  setup.cfg  setup.py
beamng_teleop_keyboard/beamng_teleop_keyboard/: teleop.py
docs/: build.sh  conf.py  deploy_production.sh  index.rst  msg_doc.py  pre_build.py
docs/_templates/: versions.html
docs/beamng_msgs/: index.rst
docs/beamng_ros2/: index.rst
media/: root_template.html
