<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beamng_agent</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ubuntu22@todo.todo">ubuntu22</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

<!-- Added ForTesting -->
      <!-- <build_depend>ament_cmake</build_depend>
      <build_depend>ament_cmake_python</build_depend>
      <exec_depend>ament_cmake</exec_depend>
      <exec_depend>ament_cmake_python</exec_depend>
      <exec_depend>rosidl_default_generators</exec_depend> -->
      <!-- <exec_depend>std_msgs</exec_depend>   -->
      <!-- Add this line if using standard messages -->
      <!-- Add more dependencies if needed -->


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
