<?xml version="1.0"?>
<package format="3">
  <name>beamng_agent</name>
  <version>0.0.0</version>
  <description>Integration of BeamNG.tech into the ROS2 ecosystem.</description>
  <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>beamng_msgs</build_depend>  <!-- Ensure beamng_msgs is listed as a build dependency -->

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>beamngpy</exec_depend>
  <exec_depend>beamng_msgs</exec_depend>   <!-- Execution dependency for beamng_msgs -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
