<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beamng_bringup</name>
  <version>1.1.0</version>
  <description>The beamng_bringup package provides launch files for streamlined integration of BeamNG.tech with ROS2.</description>
  <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>beamng_agent</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
