<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beamng_ros2</name>
  <version>1.1.0</version>
  <description>Integration of BeamNG.tech into the ROS2 ecosystem.</description>
  <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
  <license>MIT</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>beamng_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>radar_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
